# ChangeLog for net-proxy/3proxy
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-proxy/3proxy/ChangeLog,v 1.19 2007/09/12 16:14:45 angelos Exp $

  12 Sep 2007; Christoph Mende <angelos@gentoo.org> 3proxy-0.5.3i.ebuild:
  Stable on amd64 wrt bug #189313

  06 Sep 2007; Raúl Porcel <armin76@gentoo.org> 3proxy-0.5.3i.ebuild:
  x86 stable wrt #189313

  24 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  3proxy-0.5.3i.ebuild:
  ppc stable, bug #189313

*3proxy-0.5.3i (17 Jun 2007)

  17 Jun 2007; Alin Năstac <mrness@gentoo.org> -3proxy-0.5.2.ebuild,
  -3proxy-0.5.3g.ebuild, +3proxy-0.5.3i.ebuild:
  Remove old versions. Add FTP proxy to the list of installed programs.

  14 Apr 2007; Raúl Porcel <armin76@gentoo.org> 3proxy-0.5.3h.ebuild:
  x86 stable wrt security bug 174429

  13 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  3proxy-0.5.3h.ebuild:
  ppc stable, bug #174429

*3proxy-0.5.3h (13 Apr 2007)

  13 Apr 2007; Alin Năstac <mrness@gentoo.org> +3proxy-0.5.3h.ebuild:
  Version bumped wrt security bug #174429.

  11 Apr 2007; Alin Năstac <mrness@gentoo.org> -3proxy-0.5.3a.ebuild,
  3proxy-0.5.3g.ebuild:
  Stable on amd64.

*3proxy-0.5.3g (17 Jan 2007)

  17 Jan 2007; Alin Năstac <mrness@gentoo.org> -3proxy-0.5.3.ebuild,
  +3proxy-0.5.3g.ebuild:
  Version bump.

*3proxy-0.5.3a (09 Nov 2006)

  09 Nov 2006; Alin Nastac <mrness@gentoo.org> +3proxy-0.5.3a.ebuild:
  Version bump (#154328).

*3proxy-0.5.3 (14 Oct 2006)

  14 Oct 2006; Mike Frysinger <vapier@gentoo.org> +3proxy-0.5.3.ebuild:
  Version bump.

  25 May 2006; Michael Hanselmann <hansmi@gentoo.org> 3proxy-0.5.2.ebuild:
  Stable on ppc.

  14 Apr 2006; Alin Nastac <mrness@gentoo.org> 3proxy-0.5.2.ebuild:
  Stable on x86.

*3proxy-0.5.2 (14 Mar 2006)

  14 Mar 2006; Mike Frysinger <vapier@gentoo.org> +3proxy-0.5.2.ebuild:
  Version bump.

  30 Jul 2005; Alin Nastac <mrness@gentoo.org> -3proxy-0.5b.ebuild:
  Remove obsolete version.
