@@ -1,3 +1,0 @@
-MD5 fe437256188e840bd16fbb6ad0156699 3proxy-0.5.3h.tgz 190566
-RMD160 39153b015a22e26c43bec971087590960d485650 3proxy-0.5.3h.tgz 190566
-SHA256 1e0b8517d8bd73b0f5469a09112c812822b09dacea9c59bf9d87a82a8a2cc221 3proxy-0.5.3h.tgz 190566
