@@ -1,0 +1,3 @@
+MD5 a06298d5984b6a4510ba3347518f43ef 3proxy-0.5.3j.tgz 190749
+RMD160 8328e3a87b571dddfa2c8150f336856dd6fb703f 3proxy-0.5.3j.tgz 190749
+SHA256 533a38b1864ea45b46f04c9bc64d1bfdf597561dd88c4e1ed4f982de5a145d91 3proxy-0.5.3j.tgz 190749
