@@ -1,6 +1,12 @@
 # ChangeLog for net-proxy/3proxy
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/3proxy/ChangeLog,v 1.19 2007/09/12 16:14:45 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/3proxy/ChangeLog,v 1.20 2007/10/23 13:42:10 mrness Exp $
+
+*3proxy-0.5.3j (23 Oct 2007)
+
+  23 Oct 2007; Alin Năstac <mrness@gentoo.org> -3proxy-0.5.3h.ebuild,
+  +3proxy-0.5.3j.ebuild:
+  Version bump (#196772).
 
   12 Sep 2007; Christoph Mende <angelos@gentoo.org> 3proxy-0.5.3i.ebuild:
   Stable on amd64 wrt bug #189313
